adding a data co-lab section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <div class="navbar-translate">
         <div class="brands">
             <a class="navbar-brand" href="http://www.data-co-lab.com/" rel="tooltip" title="Data Co-Lab" data-placement="bottom" target="_blank">
-                <img class="brand-img" src="assets/img/brand/logo_white.png">
+                <img class="brand-img" src="./assets/img/brand/logo_white.png">
             </a>
             <a class="navbar-brand js-scroll-trigger" href="#page-top" rel="tooltip" title="GenoVision" data-placement="bottom" target="_self">
-                <img class="brand-img" id="project-logo" src="assets/img/brand/logo-full-white.png">
+                <img class="brand-img" id="project-logo" src="./assets/img/brand/logo-full-white.png">
             </a>
         </div>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,6 +77,9 @@
     </div>
   </nav>
   <!-- End Navbar -->
+
+
+  
   <div class="page-header" data-parallax="true" style="background-image: url('./assets/img/header-image.jpg');">
     <div class="filter"></div>
     <div class="container">
@@ -92,7 +95,9 @@
       </div>
     </div>
   </div>
+
   <div class="main">
+
     <div class="section text-center" id="About">
       <div class="container">
         <div class="row">
@@ -161,6 +166,29 @@
         </div>
       </div>
     </div>
+
+    <div class="section text-center" >
+      <div class="container" id="co-lab-snippet">          
+        <div class="col-md-8 ml-auto mr-auto">      
+          <h2 class="title">Let's talk Data Co-Lab</h2>        
+          <h5 class="description">Visit our website to know more about the 
+            organization who's mission is to empower AI culture in Tunisia.</h5>
+        </div>
+                
+        <div class="col-md-12 ml-auto mr-auto">   
+          <a href="http://www.data-co-lab.com/" target="_blank">
+            <div class="card bg-dark text-white" id="co-lab-card">
+              <img src="./assets/img/co-lab-snippet.PNG" class="card-img" alt="data co-lab link" id="co-lab-card-img">
+              <div class="card-img-overlay" id="co-lab-snippet-overlay">
+                <h3 class="card-title" id="co-lab-card-txt"></h3>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    
+
     <div class="section section-dark text-center" id="Team">
       <div class="container">
         <h2 class="title">Let's talk about us</h2>
@@ -243,6 +271,7 @@
         </div>
       </div>
     </div>
+
     <div class="section landing-section" id="Contact">
       <div class="container">
         <div class="row">
@@ -286,6 +315,7 @@
       </div>
     </div>
   </div>
+
   <footer class="footer   footer-white ">
     <div class="container">
       <div class="row">
