added upload page (not connected to api yet)

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="../assets/img/faces/clem-onojeghuo-3.jpg" alt="...">
+                  <img src="./assets/img/lilia_ennouri.jpg" alt="Image of Lilia Ennouri">
                 </a>
               </div>
               <div class="card-body">
@@ -213,8 +213,8 @@
               </div>
               <div class="card-footer text-center">
                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/taherromdhane" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/taher-romdhane/" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="../assets/img/faces/joe-gardner-2.jpg" alt="...">
+                  <img src="./assets/img/taher_romdhane.jpg" alt="Image of Taher Romdhane">
                 </a>
               </div>
               <div class="card-body">
@@ -238,7 +238,7 @@
               </div>
               <div class="card-footer text-center">
                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
+                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-github"></i></a>
                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
@@ -247,7 +247,7 @@
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="../assets/img/faces/erik-lucatero-2.jpg" alt="...">
+                  <img src="./assets/img/achraf_haddar.jpg" alt="Image of Achraf Haddar">
                 </a>
               </div>
               <div class="card-body">
@@ -263,7 +263,7 @@
               </div>
               <div class="card-footer text-center">
                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
+                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-github"></i></a>
                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
