turned view demo button to view on github temporarly

--- a/upload.html
+++ b/upload.html
@@ -67,7 +67,7 @@
                       <i class="fa fa-send"></i> Contact Us</a>
               </li> -->
               <li>
-                  <a href="./index">
+                  <a href="./index.html">
                       <button type="button" class="btn btn-neutral btn-round">
                           More info
                       </button>
