--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <h1 id="project-title">GenoVision</h1>
         <h3> Cancer detection made easier.</h3>
         <br />
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round" target="_blank">
-            <i class="fa fa-play"></i>Watch demo</a>
+        <a href="https://github.com/taherromdhane/histopathologic-cancer-detection" class="btn btn-outline-neutral btn-round" target="_blank">
+            <i class="fa fa-github"></i>View on GitHub</a>
         <a href="./upload.html">
             <button type="button" class="btn btn-neutral btn-round">Try it for free</button>
         </a>
