--- a/index.html
+++ b/index.html
@@ -322,13 +322,10 @@
         <nav class="footer-nav">
           <ul>
             <li>
-              <a href="" target="_blank">Creative Tim</a>
+              <a href="mailto:romdhane.attaher@gmail.com" target="_blank">Contact</a>
             </li>
             <li>
-              <a href="" target="_blank">Blog</a>
-            </li>
-            <li>
-              <a href="" target="_blank">Licenses</a>
+              <a href="" target="_blank">Portfolio</a>
             </li>
           </ul>
         </nav>
